<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home"
        android:iconTint="@color/sub_01" />

    <item
        android:id="@+id/navigation_community"
        android:icon="@drawable/ic_community"
        android:title="@string/title_community"
        android:iconTint="@color/main_01" />

    <item
        android:id="@+id/navigation_mypage"
        android:icon="@drawable/ic_mypage"
        android:title="@string/title_mypage"
        android:iconTint="@color/sub_02" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/title_settings"
        android:iconTint="@color/main_02" />

</menu>