<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment"
    android:id="@+id/homeFrag">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.37" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.57" />

    <TextView
        android:id="@+id/o_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="8dp"
        android:text="Original Season"
        app:layout_constraintBottom_toTopOf="@+id/original_season"
        app:layout_constraintStart_toStartOf="@+id/original_season"
        app:layout_constraintTop_toBottomOf="@+id/user_name" />

    <RadioGroup
        android:id="@+id/original_season"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/o_question">

        <RadioButton
            android:id="@+id/o_spring"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/spring" />

        <RadioButton
            android:id="@+id/o_summer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/summer" />

        <RadioButton
            android:id="@+id/o_autumn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/autumn" />

        <RadioButton
            android:id="@+id/o_winter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/winter" />
    </RadioGroup>

    <TextView
        android:id="@+id/selected_o_season"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:hint="selected season"
        app:layout_constraintBottom_toTopOf="@+id/original_season"
        app:layout_constraintEnd_toEndOf="@+id/original_season" />


    <TextView
        android:id="@+id/d_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:text="Desired Season"
        app:layout_constraintBottom_toTopOf="@+id/desired_season"
        app:layout_constraintStart_toStartOf="@+id/desired_season" />

    <RadioGroup
        android:id="@+id/desired_season"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/original_season">

        <RadioButton
            android:id="@+id/d_spring"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/spring" />

        <RadioButton
            android:id="@+id/d_summer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/summer" />

        <RadioButton
            android:id="@+id/d_autumn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/autumn" />

        <RadioButton
            android:id="@+id/d_winter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/winter" />
    </RadioGroup>

    <TextView
        android:id="@+id/selected_d_season"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:hint="selected season"
        app:layout_constraintBottom_toTopOf="@+id/desired_season"
        app:layout_constraintEnd_toEndOf="@+id/desired_season" />

    <Button
        android:id="@+id/btn_transfer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="100dp"
        android:background="@drawable/button_custom"
        android:text="Transfer"
        android:textColor="@drawable/button_text_custom"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_photo" />

    <Button
        android:id="@+id/btn_capture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:backgroundTint="@color/white"
        android:drawableTop="@drawable/ic_camera"
        android:text="CAMERA"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/desired_season" />

    <ImageView
        android:id="@+id/img_photo"
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:scaleType="fitCenter"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_capture"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/original_season"
        app:layout_constraintTop_toTopOf="parent" />




</androidx.constraintlayout.widget.ConstraintLayout>